@@ -1,13 +1,15 @@
 \name{writeOBJ}
 \alias{writeOBJ}
+\alias{readOBJ}
 \title{
-Write Wavefront OBJ format files
+Write Wavefront OBJ format files; read simple ones
 }
 \description{
-This function writes OBJ files.  This is a file format that
+\code{writeOBJ} writes OBJ files.  This is a file format that
 is commonly used in 3D graphics applications.  It does not represent text,
 but does represent points, lines, polygons (and many other types that
-RGL doesn't support).
+RGL doesn't support).  \code{readOBJ} reads a small subset
+of OBJ files.
 }
 \usage{
 writeOBJ(con, 
@@ -17,6 +19,7 @@ writeOBJ(con,
          withNormals = TRUE, withTextures = TRUE, 
          separateObjects = TRUE,
          ids = NULL)
+readOBJ(con, ...)
 }
 \arguments{
   \item{con}{
@@ -49,13 +52,22 @@ The identifiers (from \code{\link{rgl.ids}}) of the
 objects to write.  If \code{NULL}, try to write everything.
 }
 
+  \item{...}{
+Additional arguments (typically just \code{material}) to pass to
+\code{\link{tmesh3d}}.
+  }
+
 }
 \details{
 
-The current implementation only outputs triangles, quads, planes, spheres,
+The current \code{writeOBJ} implementation only outputs triangles, quads, planes, spheres,
 points, line segments, line strips and surfaces.  It does not output material
 properties such as colors, since the OBJ format does not support the per-vertex
-colors that RGL uses.
+colors that RGL uses.  
+
+The \code{readOBJ} implementation can
+only read triangular faces, and ignores information about normals
+and textures.
 
 The defaults for \code{pointsAsPoints} and \code{linesAsLines} have been
 chosen because Blender (\url{http://www.blender.org}) does not import
@@ -72,8 +84,11 @@ The output file should be readable by Blender and Meshlab; the latter can write 
 a number of other formats, including U3D, suitable for import into a PDF document.
 }
 \value{
-Invisibly returns the name of the connection to which the 
+\code{writeObj} invisibly returns the name of the connection to which the 
 data was written.
+
+\code{readObj} returns a triangle mesh object constructed
+from the input file.
 }
 \references{
 The file format was found at \url{http://www.martinreddy.net/gfx/3d/OBJ.spec}
@@ -92,5 +107,12 @@ filename <- tempfile(fileext=".obj")
 open3d()
 shade3d( icosahedron3d() )
 writeOBJ(filename)
+
+# The motivation for writing readObj() was to read this shape
+# file of Comet 67P/Churyumov-Gerasimenko, from the ESA:
+\donttest{
+open3d()
+shade3d(readOBJ(url("http://sci.esa.int/science-e/www/object/doc.cfm?fobjectid=54726"), material=list(col="gray")))
+}
 }
 \keyword{ graphics }
